# simple-cmd-args

./: .gitignore  .stack-all  .travis.yml  CHANGELOG.md  Makefile  README.md  SimpleCmdArgs.hs  TODO  simple-cmd-args.cabal  stack-8.0.1.yaml  stack-8.4.3.yaml
example/: Makefile  example.hs  readme.hs
examples/: Makefile  README  example.hs  opts.hs  readme.hs  subcmds.hs  subcmds2.hs
src/: SimpleCmdArgs.hs
